<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#757575" >


  <ImageView
      android:id="@+id/imgHomeIcon"
      android:layout_width="65dp"
      android:layout_height="65dp"
      android:contentDescription="@string/homepage_home_icon_content_description"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.046"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.021"
      app:srcCompat="@drawable/homepage_ico_home" />

  <ImageButton
      android:id="@+id/btnPatientData"
      android:layout_width="180dp"
      android:layout_height="180dp"
      android:adjustViewBounds="true"
      android:background="#00FFFFFF"
      android:contentDescription="@string/homepage_patient_data_content_description"
      android:scaleType="fitCenter"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.077"
      app:srcCompat="@drawable/homepage_ico_villagedata" />

  <ImageButton
      android:id="@+id/btnEducation"
      android:layout_width="180dp"
      android:layout_height="180dp"
      android:layout_marginTop="30dp"
      android:adjustViewBounds="true"
      android:background="#00FFFFFF"
      android:contentDescription="@string/homepage_education_content_description"
      android:scaleType="fitCenter"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnPatientData"
      app:layout_constraintVertical_bias="0.0"
      app:srcCompat="@drawable/homepage_ico_education" />

  <ImageButton
      android:id="@+id/btnFAQ"
      android:layout_width="180dp"
      android:layout_height="180dp"
      android:adjustViewBounds="true"
      android:background="#00FFFFFF"
      android:contentDescription="@string/homepage_faq_content_description"
      android:scaleType="fitCenter"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnEducation"
      app:layout_constraintVertical_bias="0.237"
      app:srcCompat="@drawable/homepage_ico_faq" />

</androidx.constraintlayout.widget.ConstraintLayout>